@@ -4,6 +4,7 @@ import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 import java.time.Duration;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 import java.util.function.Function;
@@ -11,33 +12,33 @@ import java.util.function.Function;
 public class FluxAndMonoServices {
 
     public Flux<String> fruitsFlux() {
-        return Flux.fromIterable(List.of("Mango","Orange","Banana")).log();
+        return Flux.fromIterable(Arrays.asList("Mango","Orange","Banana")).log();
     }
 
     public Flux<String> fruitsFluxMap() {
-        return Flux.fromIterable(List.of("Mango","Orange","Banana"))
+        return Flux.fromIterable(Arrays.asList("Mango","Orange","Banana"))
                 .map(String::toUpperCase);
     }
 
     public Flux<String> fruitsFluxFilter(int number) {
-        return Flux.fromIterable(List.of("Mango","Orange","Banana"))
+        return Flux.fromIterable(Arrays.asList("Mango","Orange","Banana"))
                 .filter(s -> s.length() > number);
     }
 
     public Flux<String> fruitsFluxFilterMap(int number) {
-        return Flux.fromIterable(List.of("Mango","Orange","Banana"))
+        return Flux.fromIterable(Arrays.asList("Mango","Orange","Banana"))
                 .filter(s -> s.length() > number)
                 .map(String::toUpperCase);
     }
 
     public Flux<String> fruitsFluxFlatMap() {
-        return Flux.fromIterable(List.of("Mango","Orange","Banana"))
+        return Flux.fromIterable(Arrays.asList("Mango","Orange","Banana"))
                 .flatMap(s -> Flux.just(s.split("")))
                 .log();
     }
 
     public Flux<String> fruitsFluxFlatMapAsync() {
-        return Flux.fromIterable(List.of("Mango","Orange","Banana"))
+        return Flux.fromIterable(Arrays.asList("Mango","Orange","Banana"))
                 .flatMap(s -> Flux.just(s.split(""))
                 .delayElements(Duration.ofMillis(
                         new Random().nextInt(1000)
@@ -46,7 +47,7 @@ public class FluxAndMonoServices {
     }
 
     public Flux<String> fruitsFluxConcatMap() {
-        return Flux.fromIterable(List.of("Mango","Orange","Banana"))
+        return Flux.fromIterable(Arrays.asList("Mango","Orange","Banana"))
                 .concatMap(s -> Flux.just(s.split(""))
                         .delayElements(Duration.ofMillis(
                                 new Random().nextInt(1000)
@@ -56,7 +57,7 @@ public class FluxAndMonoServices {
 
     public Mono<List<String>> fruitMonoFlatMap() {
         return Mono.just("Mango")
-                .flatMap(s -> Mono.just(List.of(s.split(""))))
+                .flatMap(s -> Mono.just(Arrays.asList(s.split(""))))
                 .log();
     }
 
@@ -71,7 +72,7 @@ public class FluxAndMonoServices {
         Function<Flux<String>,Flux<String>> filterData
                 = data -> data.filter(s -> s.length() > number);
 
-        return Flux.fromIterable(List.of("Mango","Orange","Banana"))
+        return Flux.fromIterable(Arrays.asList("Mango","Orange","Banana"))
                 .transform(filterData)
                 .log();
                 //.filter(s -> s.length() > number);
@@ -82,7 +83,7 @@ public class FluxAndMonoServices {
         Function<Flux<String>,Flux<String>> filterData
                 = data -> data.filter(s -> s.length() > number);
 
-        return Flux.fromIterable(List.of("Mango","Orange","Banana"))
+        return Flux.fromIterable(Arrays.asList("Mango","Orange","Banana"))
                 .transform(filterData)
                 .defaultIfEmpty("Default")
                 .log();
@@ -94,7 +95,7 @@ public class FluxAndMonoServices {
         Function<Flux<String>,Flux<String>> filterData
                 = data -> data.filter(s -> s.length() > number);
 
-        return Flux.fromIterable(List.of("Mango","Orange","Banana"))
+        return Flux.fromIterable(Arrays.asList("Mango","Orange","Banana"))
                 .transform(filterData)
                 .switchIfEmpty(Flux.just("Pineapple","Jack Fruit")
                             .transform(filterData))
@@ -103,82 +104,82 @@ public class FluxAndMonoServices {
     }
 
     public Flux<String> fruitsFluxConcat() {
-        var fruits = Flux.just("Mango","Orange");
-        var veggies = Flux.just("Tomato","Lemon");
+        Flux<String> fruits = Flux.just("Mango","Orange");
+        Flux<String> veggies = Flux.just("Tomato","Lemon");
 
         return Flux.concat(fruits,veggies);
     }
 
     public Flux<String> fruitsFluxConcatWith() {
-        var fruits = Flux.just("Mango","Orange");
-        var veggies = Flux.just("Tomato","Lemon");
+        Flux<String> fruits = Flux.just("Mango","Orange");
+        Flux<String> veggies = Flux.just("Tomato","Lemon");
 
         return fruits.concatWith(veggies);
     }
 
 
     public Flux<String> fruitsMonoConcatWith() {
-        var fruits = Mono.just("Mango");
-        var veggies = Mono.just("Tomato");
+        Mono<String> fruits = Mono.just("Mango");
+        Mono<String> veggies = Mono.just("Tomato");
 
         return fruits.concatWith(veggies);
     }
 
     public Flux<String> fruitsFluxMerge() {
-        var fruits = Flux.just("Mango","Orange")
+        Flux<String> fruits = Flux.just("Mango","Orange")
                 .delayElements(Duration.ofMillis(50));
-        var veggies = Flux.just("Tomato","Lemon")
+        Flux<String> veggies = Flux.just("Tomato","Lemon")
                 .delayElements(Duration.ofMillis(75));
 
         return Flux.merge(fruits,veggies);
     }
 
     public Flux<String> fruitsFluxMergeWith() {
-        var fruits = Flux.just("Mango","Orange")
+        Flux<String> fruits = Flux.just("Mango","Orange")
                 .delayElements(Duration.ofMillis(50));
-        var veggies = Flux.just("Tomato","Lemon")
+        Flux<String> veggies = Flux.just("Tomato","Lemon")
                 .delayElements(Duration.ofMillis(75));
 
         return fruits.mergeWith(veggies);
     }
 
     public Flux<String> fruitsFluxMergeWithSequential() {
-        var fruits = Flux.just("Mango","Orange")
+        Flux<String> fruits = Flux.just("Mango","Orange")
                 .delayElements(Duration.ofMillis(50));
-        var veggies = Flux.just("Tomato","Lemon")
+        Flux<String> veggies = Flux.just("Tomato","Lemon")
                 .delayElements(Duration.ofMillis(75));
 
         return Flux.mergeSequential(fruits,veggies);
     }
 
     public Flux<String> fruitsFluxZip() {
-        var fruits = Flux.just("Mango","Orange");
-        var veggies = Flux.just("Tomato","Lemon");
+        Flux<String> fruits = Flux.just("Mango","Orange");
+        Flux<String> veggies = Flux.just("Tomato","Lemon");
 
         return Flux.zip(fruits,veggies,
                 (first,second) -> first+second).log();
     }
 
     public Flux<String> fruitsFluxZipWith() {
-        var fruits = Flux.just("Mango","Orange");
-        var veggies = Flux.just("Tomato","Lemon");
+        Flux<String> fruits = Flux.just("Mango","Orange");
+        Flux<String> veggies = Flux.just("Tomato","Lemon");
 
         return fruits.zipWith(veggies,
                 (first,second) -> first+second).log();
     }
 
     public Flux<String> fruitsFluxZipTuple() {
-        var fruits = Flux.just("Mango","Orange");
-        var veggies = Flux.just("Tomato","Lemon");
-        var moreVeggies = Flux.just("Potato","Beans");
+        Flux<String> fruits = Flux.just("Mango","Orange");
+        Flux<String> veggies = Flux.just("Tomato","Lemon");
+        Flux<String> moreVeggies = Flux.just("Potato","Beans");
 
         return Flux.zip(fruits,veggies,moreVeggies)
                 .map(objects -> objects.getT1() + objects.getT2() + objects.getT3());
     }
 
     public Mono<String> fruitsMonoZipWith() {
-        var fruits = Mono.just("Mango");
-        var veggies = Mono.just("Tomato");
+        Mono<String> fruits = Mono.just("Mango");
+        Mono<String> veggies = Mono.just("Tomato");
 
         return fruits.zipWith(veggies,
                 (first,second) -> first+second).log();
@@ -191,7 +192,7 @@ public class FluxAndMonoServices {
 
 
     public Flux<String> fruitsFluxFilterDoOn(int number) {
-        return Flux.fromIterable(List.of("Mango","Orange","Banana"))
+        return Flux.fromIterable(Arrays.asList("Mango","Orange","Banana"))
                 .filter(s -> s.length() > number)
                 .doOnNext(s -> {
                     System.out.println("s = " + s);
